--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,7 +14,6 @@ button {
     height: 30px;
     font-weight: bold;
     border-radius: 10px;
-    display: block;
 }
 
 button:hover {
@@ -23,8 +22,10 @@ button:hover {
 }
 
 #container {
-    text-align: center;
     margin: 30px auto 0px auto;
+    padding-bottom: 10px;
+    width: 20vw;
+    text-align:center;
 }
 
 #imageContainer {
