--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -9,8 +9,9 @@
 }
 
 button {
-    margin: 10px 0px 0px 10px;
-    width: 100px;
+    /* margin: 10px 0px 0px 10px; */
+    margin-bottom: 5px;
+    width: 300px;
     height: 30px;
     font-weight: bold;
     border-radius: 10px;
@@ -24,7 +25,6 @@ button:hover {
 #container {
     margin: 30px auto 0px auto;
     padding-bottom: 10px;
-    width: 20vw;
     text-align:center;
 }
 
