--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,7 @@ button {
     height: 30px;
     font-weight: bold;
     border-radius: 10px;
+    border: 0px transparent;
 }
 
 button:hover {
@@ -30,7 +31,7 @@ button:hover {
 
 #imageContainer {
     border: 2px solid black;
-    box-shadow: 5px 5px black;
+    /* box-shadow: 5px 5px black; */
     border-radius: 20px;
 }
 
