--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -30,9 +30,9 @@ button:hover {
 }
 
 #imageContainer {
-    border: 2px solid black;
+    /* border: 2px solid black; */
     /* box-shadow: 5px 5px black; */
-    border-radius: 20px;
+    border-radius: 10px;
 }
 
 h1 {
